# SkyrimIntegrationBridge

./: .gitignore  Cargo.toml  LICENSE  README.md  aliases.json  bridge.ts  config.json  ui.html  ui.ts
forms/: Dawnguard.esm.csv  Dragonborn.esm.csv  PakLTwitchIntegration.esp.csv  Skyrim - Export everything.pas  Skyrim.esm.csv
src/: aliases.rs  formsearch.rs  main.rs  webinterface.rs
templates/: search_results.html  ui.html
