[package]
name = "skyrim_integration_bridge"
version = "0.1.1"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
warp = "0.3"
askama = "0.12"
futures-util = "0.3"
regex = "1.9"
itertools = "0.11"